score/testdata/networkpolicy-deployment-not-matching-selector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testapp-netpol
  namespace: testspace
spec:
  podSelector:
    matchLabels:
      app: foo
  policyTypes:
    - Egress
    - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-test-1
  namespace: testspace
spec:
  template:
    metadata:
      labels:
        app: not-foo
    spec:
      containers:
        - name: foobar
          image: foo:bar
